--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
     "nodemon": "^1.11.0",
     "qs": "^6.5.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
